@@ -1,4 +1,5 @@
 
+* Let build a DokuJClient with an arbitrary XmlRpcClient
 * Let pass arbitrary options when editing a page
 * Throw a relevant exception when trying to create an empty new page
 
